# Support-Metrics

./: .dev_env.sh  .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml  server.py  server_cache.py  server_models.py  tasks.py  tmp.py  worker.py
.dvc/: config
.github/worflows/: Test.yaml
.github/workflows/: Deploy.yaml  Test.yaml  Test_and_Deploy.yaml
Tests/: conftest.py  env.py  migrations.sql  params.dvc  responses.dvc  test_case.py  test_customers_activity_api.py  test_db.dvc  test_env.sh  test_metrics.py  test_metrics_api.py  utils.py
Tests/cases/: __init__.py  csi.py  iterations.py  lifetime.py  people.py  replies_rate.py  resolution_time.py  tickets.py
Tests/responses/: csi  iterations  lifetime  people  replies_rate  resolution_time  tickets
application_service/: .dockerignore  Dockerfile  plotly_server.py  pyproject.toml  user_posts_repository.py
configs/: config.py  customers_activity_config.py  customers_activity_tasks_config.py  tasks_config.py
configs/Tests/: test_config.py  test_customers_activity_config.py  test_customers_activity_tasks_config.py
help/: index.py
help/customers_activity/: 1. $What data is available.MD  2. $How license and conversion statuses are calculated.MD  3. $Baseline aligned mode.MD  3. $Tracked users groups mode.MD  4. $Select (skip) top.MD  4. $Select top.MD  5. $Examples.MD  5. $Ticket types.MD  6. $Examples.MD
help/metrics_descriptions/: Iterations.MD  Iterations_Tickets.MD  People.MD  Satisfaction Index.MD  Ticket Lifetime.MD  Ticket Resolution Time.MD  Tickets.MD
repository/: __init__.py  factory.py  index_creation_expressions_repository.py  server_repository.py
repository/customers_activity/: factory.py  groups_repository.py  repository.py  tags_repository.py  tickets_with_iterations_repository.py
repository/local/: aggs.py  cat.py  customers.py  employees.py  factory.py  licenses_conversion.py  platforms_products.py  repository.py  tables_builder.py  tents.py  tickets.py  tribes.py  (+3 more)
sql/: base_repository.py  columns_validator.py  meta_data.py  query_executors.py  sql_query.py
sql_queries/: index.py  meta.py
tasks/: customers_activity_tasks.py  employees.py  tasks.py
user_posts_statistic_service/: Dockerfile.user_posts_statistic_service  mock_server.py  pyproject.toml  tasks.py  test_server.py  user_posts_worker.py
(+282 files in other folders)
