[tool.poetry]
authors = ["Stanislav Shchelokovskiy <stanislav.shchelokovskiy@gmail.com>"]
description = ""
name = "app"
version = "0.1.0"

[tool.poetry.dependencies]
SQLAlchemy = "^1.4.44"
celery = {extras = ["redis"], version = "^5.2.7"}
fastapi = "^0.87.0"
flower = "^1.2.0"
pandas = "^1.5.1"
pydantic = "^1.9.1"
pyodbc = "^4.0.35"
python = "^3.11"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]
jsonschema = "^4.17.0"
flake8 = "^4.0.1"
pylint = "^2.13.7"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-xdist = {extras = ["psutil"], version = "^2.5.0"}
toml = "^0.10.2"
yapf = "^0.32.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
